<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".WorkActivity">

    <androidx.appcompat.widget.Toolbar
        android:theme="@style/myStyle"
        app:popupTheme="@style/popStyle"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView

        android:layout_marginEnd="2dp"
        android:background="@drawable/bg_main"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/panel_show"
                android:background="#909090"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                >

                <ImageView
                    android:layout_marginStart="5dp"
                    android:src="@drawable/panel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:text="@string/work_panel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp" />

                <ImageView
                    android:src="@drawable/down_arrow"
                    android:id="@+id/work_img_panel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="215dp">

                <LinearLayout
                    android:layout_marginStart="5dp"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:layout_marginLeft="5dp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:text="@string/work_width"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:text="@string/work_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:text="@string/work_qty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView

                            android:textColor="#000000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/panel_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stock_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stock_show"
                android:background="#909090"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <ImageView
                    android:layout_marginStart="5dp"
                    android:src="@drawable/stock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:text="@string/work_stock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp" />

                <ImageView
                    android:src="@drawable/down_arrow"
                    android:id="@+id/work_img_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stock_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="215dp">

                <LinearLayout
                    android:layout_marginStart="5dp"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:layout_marginLeft="5dp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:text="@string/work_width"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:text="@string/work_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:text="@string/work_qty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="1dp"
                        android:background="#000000"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView

                            android:textColor="#000000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/result_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/work_start"
        android:onClick="workClick"
        android:src="@drawable/play"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        app:fabSize="normal"
        android:layout_height="wrap_content"
        android:focusable="true" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_margin="15dp"
        android:layout_gravity="center|bottom"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>